<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:padding="10dp" 
	    android:orientation="vertical" >
	    <LinearLayout 
	        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="left|top"
		        android:text="@string/no_smoke_date_label" />
		    <EditText
		        android:id="@+id/editTextDate"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="date"
		        android:visibility="gone"
		        android:hint="29.08.2013" />
		    
		    <DatePicker
		        android:id="@+id/datePicker"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:calendarViewShown="false"
		         />
		       
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/no_smoke_years_label" />
		    <EditText
		        android:id="@+id/editTextYears"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="number"
		        android:hint="12" />
		    
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/no_smoke_count_label" />
		    <EditText
		        android:id="@+id/editTextCount"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="number"
		        android:hint="20" />
		
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/no_smoke_price_label" />
		    <EditText
		        android:id="@+id/editTextPrice"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="numberDecimal"
		        android:hint="40" />
			
			<Button
			    android:id="@+id/buttonOk"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:text="@string/no_smoke_ok" />
		</LinearLayout>
		<TextView
		    android:id="@+id/feedbackView"
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#999999"
            android:autoLink="email"
            android:text="@string/feedback"
            android:layout_gravity="bottom"
		    />
	</LinearLayout>
</ScrollView>